added some new scripts and rearranged files

--- a/screensaver.ipynb
+++ b/screensaver.ipynb
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "id": "2976f368",
    "metadata": {
     "scrolled": false
@@ -372,11 +372,11 @@
      "output_type": "stream",
      "text": [
       "Warning: Cannot change to a different GUI toolkit: widget. Using notebook instead.\n",
-      "Chosen angle: 48.8712034179162º\n",
+      "Chosen angle: 62.91266867822369º\n",
       "Screen size: 100, 100 pix\n",
       "Margin of error for corner hit: 1%\n",
       "Running Simulation\n",
-      "Total time:5674\n",
+      "Total time:3557\n",
       "Now running animation\n"
      ]
     },
@@ -393,7 +393,7 @@
     {
      "data": {
       "text/html": [
-       "<div id='2f8b1247-4337-428b-882c-06dde95e2c9b'></div>"
+       "<div id='2acdc11b-baff-432b-abd2-39038d59414a'></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -411,6 +411,7 @@
     "# # Use this option for jupyter notebook\n",
     "\n",
     "from matplotlib.animation import FuncAnimation\n",
+    "from matplotlib.animation import PillowWriter\n",
     "\n",
     "def move_final_animate(x=50, y=50, vel = 1/np.sqrt(2), angle = '', x_direction=1, y_direction=1, size_x=100, size_y=100, margin = 1):\n",
     "    cursorpos = np.array([[x, y, 0]])\n",
@@ -459,18 +460,27 @@
     "        cursorpos = np.dstack((cursorpos, new_cursorpos))\n",
     "        time += 1\n",
     "        \n",
-    "    return cursorpos\n",
+    "    return cursorpos, angle, margin # other arguments are for titling graph, need to find better way to do this part\n",
     "\n",
-    "cursorpos = move_final_animate()\n",
+    "cursorpos, angle, margin = move_final_animate()\n",
     "        \n",
     "print('Total time:' + str(cursorpos.shape[2]))\n",
     "print('Now running animation')\n",
     "\n",
+    "def truncate(num, digits):\n",
+    "    num = int(num * 10**digits)/(10**digits)\n",
+    "    return num\n",
+    "\n",
+    "    \n",
+    "\n",
     "fig, ax = plt.subplots()\n",
     "line, = ax.plot([])\n",
     "\n",
+    "ax.set_title(\"Initial Starting Angle: \" + str(truncate((angle * 180/np.pi), 3)) + \"º , Margin of Error: \" + str(margin) + \"%\")\n",
     "ax.set_xlim(0, 100)\n",
     "ax.set_ylim(0, 100)\n",
+    "ax.set_xticklabels([])\n",
+    "ax.set_yticklabels([])\n",
     "\n",
     "def animate(frame_num):\n",
     "    x = cursorpos[0,0,frame_num-20:frame_num]\n",
@@ -480,16 +490,24 @@
     "    return line\n",
     "\n",
     "anim = FuncAnimation(fig, animate, frames = cursorpos.shape[2], interval=1)\n",
-    "plt.show()"
+    "\n",
+    "f= r\"/Volumes/EDRIVE/Fall_2021/misc/scripts/outputs/gif_tests/screensaver.gif\"\n",
+    "writergif = PillowWriter(fps=100)\n",
+    "anim.save(f, writer=writergif)\n",
+    "#plt.show()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "bb4869dd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Now that it's working, a couple things to add in the future:\n",
+    "- an abort feature if simulations take longer then ~10000 frames (this one should be easy)\n",
+    "- better appearance, including better cursor marker and screen\n",
+    "- different shapes of screen (triangle, star, etc...)\n",
+    "- better optimization "
+   ]
   }
  ],
  "metadata": {
